lab1/Test/L1-A-10-94.output
Error Type A at Line 6
Error Type A at Line 10
Error Type B at Line 10
Error Type A at Line 43
Error Type B at Line 45
Error Type A at Line 46
